[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "uibbq"
author = "James Cooke"
author-email = "uibbq@jaynne.co.uk"
home-page = "https://github.com/cookejames/uibbq"
classifiers = [ "License :: OSI Approved :: Apache Software License",]
description-file = "README.md"

